--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <header class="main"></header>
 <body>
-    
+    <div class="content">
+        <h1>"Тестовая разметка"</h1>
+    </div>
 </body>
 <footer></footer>
